--- a/Screenshot/Screenshot.csproj
+++ b/Screenshot/Screenshot.csproj
@@ -57,6 +57,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ShortcutKeys.cs" />
+    <Compile Include="User32.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
